[project]
name = "flywheel"
version = "0.1.0"
description = ""
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "typing-extensions>=4.10.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 135

[tool.ruff.lint]
extend-select = ["I001"]

[tool.pdm.dev-dependencies]
dev = [
    "viztracer>=0.16.2",
]
